# constexpr-lookup-table

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  build_cpp17.yml  build_cpp23.yml  c-cpp.yml
include/: constexpr-lookup-table.h
include/constexpr-lookup-table/: constexpr-lookup-table.hpp  defines.hpp
src/: CMakeLists.txt  main.cc  main.cpp
test/: CMakeLists.txt  constexpr-lookup-table-test.cc
